--- a/views/index.twig
+++ b/views/index.twig
@@ -264,7 +264,7 @@
   <section class="section content container" id="sixth">
     <div class="box has-text-centered  has-text-light has-background-dark">
       <h1 class="has-text-centered has-text-light">Merci à tous !</h1>
-      <p> le lien du site : rpg.l-lions.fr </p>
+      <p> le lien du site : http://alpha-louis.alwaysdata.net/ </p>
       <div class="columns">
         <div class="column is-one-third is-offset-one-third">
           <img src="https://media4.giphy.com/media/Pnh0Lou03fv92J4puZ/giphy.gif?cid=ecf05e47e0mj4dwgxv24cyjajza3epr8qd2kzsp1tr71ysv9&rid=giphy.gif">
