--- a/views/index.twig
+++ b/views/index.twig
@@ -11,7 +11,7 @@
   <section class="section content container" id="first">
       <div class="box m-0 mb-4">
           <h1>Qui sommes-nous ?</h1>
-          <p> Nous sommes trois étudiants <strong>géniaux</strong>.
+          <p> Nous sommes quatre étudiants <strong>géniaux</strong>.
           <br>Nous avons réalisé ce site pour ce projet de fin d'année.
           </p>
       </div>
