--- a/views/index.twig
+++ b/views/index.twig
@@ -113,7 +113,7 @@
       <div class="box has-background-dark has-text-light">
           <h1 class="has-text-light">Il était une fois un chevalier...</h1>
           <div class="divider is-left"></div>
-          <p class="is-size-5"> Notre jeu, est accès sur un personnage principal à la facon de Don Quijote de la mancha. </p>
+          <p class="is-size-5"> Notre jeu est accès sur un personnage principal à la facon de Don Quijote de la mancha. </p>
           <div class="columns">
             <div class="column is-one-third">
               <figure class="image">
@@ -121,12 +121,12 @@
               </figure>
             </div>
             <div class="column">
-              <p class="is-size-5">
+              <p class="">
                 <b>Idée du jeu :</b>
                 <br> Vous incarnez un chevalier amnésique, en quête de ses souvenir, découvrant qu'une menace plane sur le royaume.<br>
-                <spa class="is-size-5"><b>Personnages :</b></span>
-                <br> Sur la map, vous retrouverez un mystérieux chevalier, lequelle vous donnera différentes quêtes.<br>
-                <spa class="is-size-5"><b>Univers :</b></span>
+                <spa class=""><b>Personnages :</b></span>
+                <br> Sur la map, vous retrouverez un mystérieux chevalier, lequel vous donnera différentes quêtes.<br>
+                <spa class=""><b>Univers :</b></span>
                 <br> Le monde dans lequel évolue le joueur est un monde plutôt retro, verduré, avec la présence d'une rivière mignonne, rappelant l'importance de la nature.
             </div>
           </div>
@@ -240,7 +240,7 @@
         <div class="column">
           <p class="is-size-5">
             <b>Thomas :</b>
-            <br>Gérer les mouvements du squelettes sur la map.</br>
+            <br>Gérer les mouvements du squelette sur la map.</br>
           </p>
         </div>
     </div>
@@ -264,12 +264,7 @@
   <section class="section content container" id="sixth">
     <div class="box has-text-centered  has-text-light has-background-dark">
       <h1 class="has-text-centered has-text-light">Merci à tous !</h1>
-      <p> le lien du site : http://alpha-louis.alwaysdata.net/ </p>
-      <div class="columns">
-        <div class="column is-one-third is-offset-one-third">
-          <img src="https://media4.giphy.com/media/Pnh0Lou03fv92J4puZ/giphy.gif?cid=ecf05e47e0mj4dwgxv24cyjajza3epr8qd2kzsp1tr71ysv9&rid=giphy.gif">
-        </div>
-      </div>
+      <a href='https://www.unitag.io/qrcode'><img src='https://www.unitag.io/qreator/generate?crs=Ppv8rOENN3V1lAwTz82zPgJCeRt23RLSE9SsU4N%252BrxqX4N9KhizbkATejaCcMBan9jqG%252FxftIvOPi1JF2kaypDFUcwc2XEJ8YaYpyfIdC%252BDUYxT4%252BY1uSshdMusAfnxGPfMNQSYrvQhkbMILoTLAyg%253D%253D&crd=fhOysE0g3Bah%252BuqXA7NPQ87MoHrnzb%252BauJLKoOEbJsp40GHkOZEtRbgLmqV1JoDGK8pmhYaMPozufG%252FUOBkH%252FQ%253D%253D' alt='QR Code'/></a>
     </div>
   </section>
   <section class="section content container" id="seven">
