--- a/views/index.twig
+++ b/views/index.twig
@@ -113,7 +113,7 @@
       <div class="box has-background-dark has-text-light">
           <h1 class="has-text-light">Il était une fois un chevalier...</h1>
           <div class="divider is-left"></div>
-          <p class="is-size-5"> Notre jeu est accès sur un personnage principal à la facon de Don Quijote de la mancha. </p>
+          <p class=""> Notre jeu est accès sur un personnage principal à la facon de Don Quijote de la mancha. </p>
           <div class="columns">
             <div class="column is-one-third">
               <figure class="image">
@@ -264,7 +264,11 @@
   <section class="section content container" id="sixth">
     <div class="box has-text-centered  has-text-light has-background-dark">
       <h1 class="has-text-centered has-text-light">Merci à tous !</h1>
-      <a href='https://www.unitag.io/qrcode'><img src='https://www.unitag.io/qreator/generate?crs=Ppv8rOENN3V1lAwTz82zPgJCeRt23RLSE9SsU4N%252BrxqX4N9KhizbkATejaCcMBan9jqG%252FxftIvOPi1JF2kaypDFUcwc2XEJ8YaYpyfIdC%252BDUYxT4%252BY1uSshdMusAfnxGPfMNQSYrvQhkbMILoTLAyg%253D%253D&crd=fhOysE0g3Bah%252BuqXA7NPQ87MoHrnzb%252BauJLKoOEbJsp40GHkOZEtRbgLmqV1JoDGK8pmhYaMPozufG%252FUOBkH%252FQ%253D%253D' alt='QR Code'/></a>
+      <div class="columns">
+        <div class="column is-one-third is-offset-one-third">
+          <img src="./images/qr-code.png">
+        </div>
+      </div>
     </div>
   </section>
   <section class="section content container" id="seven">
